fix: align locale

--- a/src/assets/styles/components/Header.css
+++ b/src/assets/styles/components/Header.css
@@ -166,6 +166,7 @@ button.locale:hover {
   display: flex;
   gap: 4px;
   justify-content: center;
+  align-items: center;
   padding: 1rem 0;
   border-top: 1px solid var(--gray-op);
   border-bottom: 1px solid var(--gray-op);
